style: api 서버 연동을 위한 세팅

--- a/build.gradle
+++ b/build.gradle
@@ -35,10 +35,9 @@ dependencies {
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     // MySql
-    implementation 'org.testcontainers:mysql:1.19.0'
     runtimeOnly 'com.mysql:mysql-connector-j'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
-    runtimeOnly 'org.springframework.boot:spring-boot-docker-compose'
+//    runtimeOnly 'org.springframework.boot:spring-boot-docker-compose'
     implementation 'org.projectlombok:lombok:1.18.30'
     annotationProcessor 'org.projectlombok:lombok:1.18.30'
     // jwt
