--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,17 +1,22 @@
+server:
+  port: 8080
+  address: 0.0.0.0
 
 spring:
   application:
     name: wallet-guardians-api
 
   datasource:
-    url: jdbc:mysql://localhost:3306/jpa
+    url: jdbc:mysql://34.58.4.225:3306/wallet_guardians?serverTimezone=Asia/Seoul
     driver-class-name: com.mysql.cj.jdbc.Driver
     username: root
-    password: mysql
+    password: root
 
   jpa:
+    open-in-view: true
     hibernate:
       ddl-auto: update
+    show-sql: true
     properties:
       hibernate:
         format_sql: true
