--- a/build.gradle
+++ b/build.gradle
@@ -33,7 +33,8 @@ dependencies {
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
-
+    // OAuth2
+    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
     // MySql
     runtimeOnly 'com.mysql:mysql-connector-j'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
