docs: OCR 호출을 위한 정보 application.yml 파일에 추가

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -34,3 +34,9 @@ spring:
 
 jwt:
   secret-Key: ${JWT_SECRET_KEY}
+
+naver:
+  service:
+    base-url: "https://cupgrvtb2d.apigw.ntruss.com"
+    endpoint: ${CLOVA_ENDPOINT}
+    secretKey: ${CLOVA_SECRET_KEY}
