[TSK-35] Feat/oauth login: 구글 OAuth2 로그인 구현 (#20)
* docs: 로컬에서 https 적용을 위해 yml에 ssl 설정

* fix: 메서드명 수정

* refactor: throw 변경

* fix: 매핑 uri 변경에 따른 변경

* fix: 매핑 uri 변경에 따른 변경

* build: OAuth 의존성 추가

* style: user 엔티티 변경

* feat: OAuth 로그인 기능 구현

* fix: 테스트 시 발생한 문제 수정 및 파일 위치 변경

* fix: 테스트 시 발생한 문제 수정 및 파일 위치 변경

* fix: SSL 인증 해제

--- a/build.gradle
+++ b/build.gradle
@@ -35,6 +35,8 @@ dependencies {
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     implementation("org.springframework.boot:spring-boot-starter-webflux")
 
+    // OAuth2
+    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
     // MySql
     runtimeOnly 'com.mysql:mysql-connector-j'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
