--- a/cloudbuild.yml
+++ b/cloudbuild.yml
@@ -1,11 +1,18 @@
 steps:
-  # Build the container image
+  # 1. Gradle을 사용해 JAR 빌드
+  - name: 'gcr.io/cloud-builders/gradle'
+    args: ['build']
+    dir: '.'
+
+  # 2. Docker 이미지 빌드
   - name: 'gcr.io/cloud-builders/docker'
     args: ['build', '-t', 'gcr.io/lively-marking-448507-f6/wallet-guardians-api:$COMMIT_SHA', '.']
-  # Push the container image to Container Registry
+
+  # 3. Docker 이미지 푸시
   - name: 'gcr.io/cloud-builders/docker'
     args: ['push', 'gcr.io/lively-marking-448507-f6/wallet-guardians-api:$COMMIT_SHA']
-  # Deploy container image to Cloud Run
+
+  # 4. Cloud Run 배포
   - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
     entrypoint: gcloud
     args:
@@ -16,5 +23,6 @@ steps:
       - 'gcr.io/lively-marking-448507-f6/wallet-guardians-api:$COMMIT_SHA'
       - '--region'
       - 'us-central1'
+
 images:
   - 'gcr.io/lively-marking-448507-f6/wallet-guardians-api:$COMMIT_SHA'
